feat: add custom copy widget.

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -948,7 +948,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f1fd0fb47c244bf8d5c5e5ee33da3c1",
+       "model_id": "7f3133aa1f6440f48d2f230b788e8949",
        "version_major": 2,
        "version_minor": 0
       },
@@ -981,194 +981,75 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\u001B[0;31mSignature:\u001B[0m\n",
-       "\u001B[0mdisplay\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\u001B[0m\n",
-       "\u001B[0;34m\u001B[0m    \u001B[0;34m*\u001B[0m\u001B[0mobjs\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\n",
-       "\u001B[0;34m\u001B[0m    \u001B[0minclude\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mNone\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\n",
-       "\u001B[0;34m\u001B[0m    \u001B[0mexclude\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mNone\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\n",
-       "\u001B[0;34m\u001B[0m    \u001B[0mmetadata\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mNone\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\n",
-       "\u001B[0;34m\u001B[0m    \u001B[0mtransient\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mNone\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\n",
-       "\u001B[0;34m\u001B[0m    \u001B[0mdisplay_id\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mNone\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\n",
-       "\u001B[0;34m\u001B[0m    \u001B[0mraw\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mFalse\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\n",
-       "\u001B[0;34m\u001B[0m    \u001B[0mclear\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mFalse\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\n",
-       "\u001B[0;34m\u001B[0m    \u001B[0;34m**\u001B[0m\u001B[0mkwargs\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\n",
-       "\u001B[0;34m\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-       "\u001B[0;31mDocstring:\u001B[0m\n",
-       "Display a Python object in all frontends.\n",
-       "\n",
-       "By default all representations will be computed and sent to the frontends.\n",
-       "Frontends can decide which representation is used and how.\n",
-       "\n",
-       "In terminal IPython this will be similar to using :func:`print`, for use in richer\n",
-       "frontends see Jupyter notebook examples with rich display logic.\n",
-       "\n",
-       "Parameters\n",
-       "----------\n",
-       "*objs : object\n",
-       "    The Python objects to display.\n",
-       "raw : bool, optional\n",
-       "    Are the objects to be displayed already mimetype-keyed dicts of raw display data,\n",
-       "    or Python objects that need to be formatted before display? [default: False]\n",
-       "include : list, tuple or set, optional\n",
-       "    A list of format type strings (MIME types) to include in the\n",
-       "    format data dict. If this is set *only* the format types included\n",
-       "    in this list will be computed.\n",
-       "exclude : list, tuple or set, optional\n",
-       "    A list of format type strings (MIME types) to exclude in the format\n",
-       "    data dict. If this is set all format types will be computed,\n",
-       "    except for those included in this argument.\n",
-       "metadata : dict, optional\n",
-       "    A dictionary of metadata to associate with the output.\n",
-       "    mime-type keys in this dictionary will be associated with the individual\n",
-       "    representation formats, if they exist.\n",
-       "transient : dict, optional\n",
-       "    A dictionary of transient data to associate with the output.\n",
-       "    Data in this dict should not be persisted to files (e.g. notebooks).\n",
-       "display_id : str, bool optional\n",
-       "    Set an id for the display.\n",
-       "    This id can be used for updating this display area later via update_display.\n",
-       "    If given as `True`, generate a new `display_id`\n",
-       "clear : bool, optional\n",
-       "    Should the output area be cleared before displaying anything? If True,\n",
-       "    this will wait for additional output before clearing. [default: False]\n",
-       "**kwargs : additional keyword-args, optional\n",
-       "    Additional keyword-arguments are passed through to the display publisher.\n",
-       "\n",
-       "Returns\n",
-       "-------\n",
-       "handle: DisplayHandle\n",
-       "    Returns a handle on updatable displays for use with :func:`update_display`,\n",
-       "    if `display_id` is given. Returns :any:`None` if no `display_id` is given\n",
-       "    (default).\n",
-       "\n",
-       "Examples\n",
-       "--------\n",
-       ">>> class Json(object):\n",
-       "...     def __init__(self, json):\n",
-       "...         self.json = json\n",
-       "...     def _repr_pretty_(self, pp, cycle):\n",
-       "...         import json\n",
-       "...         pp.text(json.dumps(self.json, indent=2))\n",
-       "...     def __repr__(self):\n",
-       "...         return str(self.json)\n",
-       "...\n",
-       "\n",
-       ">>> d = Json({1:2, 3: {4:5}})\n",
-       "\n",
-       ">>> print(d)\n",
-       "{1: 2, 3: {4: 5}}\n",
-       "\n",
-       ">>> display(d)\n",
-       "{\n",
-       "  \"1\": 2,\n",
-       "  \"3\": {\n",
-       "    \"4\": 5\n",
-       "  }\n",
-       "}\n",
-       "\n",
-       ">>> def int_formatter(integer, pp, cycle):\n",
-       "...     pp.text('I'*integer)\n",
-       "\n",
-       ">>> plain = get_ipython().display_formatter.formatters['text/plain']\n",
-       ">>> plain.for_type(int, int_formatter)\n",
-       "<function _repr_pprint at 0x...>\n",
-       ">>> display(7-5)\n",
-       "II\n",
-       "\n",
-       ">>> del plain.type_printers[int]\n",
-       ">>> display(7-5)\n",
-       "2\n",
-       "\n",
-       "See Also\n",
-       "--------\n",
-       ":func:`update_display`\n",
-       "\n",
-       "Notes\n",
-       "-----\n",
-       "In Python, objects can declare their textual representation using the\n",
-       "`__repr__` method. IPython expands on this idea and allows objects to declare\n",
-       "other, rich representations including:\n",
-       "\n",
-       "  - HTML\n",
-       "  - JSON\n",
-       "  - PNG\n",
-       "  - JPEG\n",
-       "  - SVG\n",
-       "  - LaTeX\n",
-       "\n",
-       "A single object can declare some or all of these representations; all are\n",
-       "handled by IPython's display system.\n",
-       "\n",
-       "The main idea of the first approach is that you have to implement special\n",
-       "display methods when you define your class, one for each representation you\n",
-       "want to use. Here is a list of the names of the special methods and the\n",
-       "values they must return:\n",
-       "\n",
-       "  - `_repr_html_`: return raw HTML as a string, or a tuple (see below).\n",
-       "  - `_repr_json_`: return a JSONable dict, or a tuple (see below).\n",
-       "  - `_repr_jpeg_`: return raw JPEG data, or a tuple (see below).\n",
-       "  - `_repr_png_`: return raw PNG data, or a tuple (see below).\n",
-       "  - `_repr_svg_`: return raw SVG data as a string, or a tuple (see below).\n",
-       "  - `_repr_latex_`: return LaTeX commands in a string surrounded by \"$\",\n",
-       "                    or a tuple (see below).\n",
-       "  - `_repr_mimebundle_`: return a full mimebundle containing the mapping\n",
-       "                         from all mimetypes to data.\n",
-       "                         Use this for any mime-type not listed above.\n",
-       "\n",
-       "The above functions may also return the object's metadata alonside the\n",
-       "data.  If the metadata is available, the functions will return a tuple\n",
-       "containing the data and metadata, in that order.  If there is no metadata\n",
-       "available, then the functions will return the data only.\n",
-       "\n",
-       "When you are directly writing your own classes, you can adapt them for\n",
-       "display in IPython by following the above approach. But in practice, you\n",
-       "often need to work with existing classes that you can't easily modify.\n",
-       "\n",
-       "You can refer to the documentation on integrating with the display system in\n",
-       "order to register custom formatters for already existing types\n",
-       "(:ref:`integrating_rich_display`).\n",
-       "\n",
-       ".. versionadded:: 5.4 display available without import\n",
-       ".. versionadded:: 6.1 display available without import\n",
-       "\n",
-       "Since IPython 5.4 and 6.1 :func:`display` is automatically made available to\n",
-       "the user without import. If you are using display in a document that might\n",
-       "be used in a pure python context or with older version of IPython, use the\n",
-       "following import at the top of your file::\n",
-       "\n",
-       "    from IPython.display import display\n",
-       "\u001B[0;31mFile:\u001B[0m      ~/miniforge3/envs/textgen/lib/python3.10/site-packages/IPython/core/display_functions.py\n",
-       "\u001B[0;31mType:\u001B[0m      function"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kuroro/miniforge3/envs/textgen/lib/python3.10/site-packages/anywidget/_util.py:251: UserWarning: anywidget: Live-reloading feature is disabled. To enable, please install the 'watchfiles' package.\n",
+      "  start_thread=_should_start_thread(path),\n"
+     ]
+    },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6f5fa9ae75f54cd2a5b7e0f1d8227c5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "datetime.date(2024, 3, 8)"
+       "Clipboard(children=[Textarea(value=''), Button(description='copy', style=ButtonStyle())], copy='hello')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d.value"
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import ipywidgets as widgets\n",
+    "from ipywui.widgets import ClipboardWidget\n",
+    "\n",
+    "textarea = widgets.Textarea()\n",
+    "copy_btn = widgets.Button(description='copy')\n",
+    "clip = ClipboardWidget(tag='div', copy='hello', children=[textarea, copy_btn])\n",
+    "widgets.jslink((textarea, 'value'), (clip, 'copy'))\n",
+    "# clip.value = 'hello'\n",
+    "clip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clip.value = '你好 hdsworrld '\n",
+    "a = 1\n",
+    "def handler(e):\n",
+    "    global a\n",
+    "    a = a+1\n",
+    "    print(e, a)\n",
+    "    \n",
+    "clip.observe(handler, names=['value'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# handler(1)\n",
+    "print(a)"
    ]
   },
   {
@@ -1303,6 +1184,13 @@
     "display(vue.options.el)\n",
     "display(vue.debug_log)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
