feat: add log module.

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -991,12 +991,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f5fa9ae75f54cd2a5b7e0f1d8227c5d",
+       "model_id": "5e7855af30a04fe9ace42b384379da77",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Clipboard(children=[Textarea(value=''), Button(description='copy', style=ButtonStyle())], copy='hello')"
+       "ClipboardWidget(children=[Textarea(value=''), Button(description='copy', style=ButtonStyle())], copy='hello')"
       ]
      },
      "execution_count": 1,
