feat: Improve the dialog component

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -946,9 +946,17 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kuroro/miniforge3/envs/textgen/lib/python3.10/site-packages/anywidget/_util.py:251: UserWarning: anywidget: Live-reloading feature is disabled. To enable, please install the 'watchfiles' package.\n",
+      "  start_thread=_should_start_thread(path),\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f3133aa1f6440f48d2f230b788e8949",
+       "model_id": "fd911c05a77948aa8a60f6c8c18b9bad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1004,35 +1012,14 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import ipywidgets as widgets\n",
-    "from ipywui.widgets import ClipboardWidget\n",
-    "\n",
-    "textarea = widgets.Textarea()\n",
-    "copy_btn = widgets.Button(description='copy')\n",
-    "clip = ClipboardWidget(tag='div', copy='hello', children=[textarea, copy_btn])\n",
-    "widgets.jslink((textarea, 'value'), (clip, 'copy'))\n",
-    "# clip.value = 'hello'\n",
-    "clip"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# clip.value = '你好 hdsworrld '\n",
-    "a = 1\n",
-    "def handler(e):\n",
-    "    global a\n",
-    "    a = a+1\n",
-    "    print(e, a)\n",
-    "    \n",
-    "clip.observe(handler, names=['value'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1047,10 +1034,7 @@
      ]
     }
    ],
-   "source": [
-    "# handler(1)\n",
-    "print(a)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1439,11 +1423,137 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Clipboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kuroro/miniforge3/envs/textgen/lib/python3.10/site-packages/anywidget/_util.py:251: UserWarning: anywidget: Live-reloading feature is disabled. To enable, please install the 'watchfiles' package.\n",
+      "  start_thread=_should_start_thread(path),\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d3d657053c024baea23482f6bac54e60",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ClipboardWidget(children=[Textarea(value=''), Button(description='copy', style=ButtonStyle())], copy='hello')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import ipywidgets as widgets\n",
+    "from ipywui.widgets import ClipboardWidget\n",
+    "\n",
+    "textarea = widgets.Textarea()\n",
+    "copy_btn = widgets.Button(description='copy')\n",
+    "clip = ClipboardWidget(tag='div', copy='hello', children=[textarea, copy_btn])\n",
+    "widgets.jslink((textarea, 'value'), (clip, 'copy'))\n",
+    "# clip.value = 'hello'\n",
+    "# clip.value = '你好 hdsworrld '\n",
+    "a = 1\n",
+    "def handler(e):\n",
+    "    global a\n",
+    "    a = a+1\n",
+    "    print(e, a)\n",
+    "    \n",
+    "clip.on_copy(handler)\n",
+    "clip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dialog Widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "36789c0164634a9b846dc3778d262e9c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Checkbox(value=True, description='show'), IntSlider(value=0), IntSlider(value=0), IntSlider(val…"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import ipywidgets as widgets\n",
+    "from ipywui.widgets import DialogWidget\n",
+    "\n",
+    "ck = widgets.Checkbox(description='show', value=True)\n",
+    "btn = widgets.Button(description='click')\n",
+    "ok_btn = widgets.Button(description='ok')\n",
+    "def handle_open(p):\n",
+    "    print(f\"open: {p}\")\n",
+    "def handle_close(p):\n",
+    "    print(f\"close: {p}\")\n",
+    "dialog = DialogWidget(title='test', body=[btn], footer=[ok_btn])\n",
+    "dialog.on_close(handle_close)\n",
+    "dialog.on_open(handle_open)\n",
+    "\n",
+    "widgets.jslink((ck, 'value'), (dialog, 'value'))\n",
+    "box = widgets.VBox([\n",
+    "    ck,\n",
+    "    widgets.IntSlider(),\n",
+    "    widgets.IntSlider(),\n",
+    "    widgets.IntSlider(),\n",
+    "    dialog,\n",
+    "])\n",
+    "box\n",
+    "# dialog"
+   ]
   }
  ],
  "metadata": {
