modified: ipy-vue.ipynb

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -1504,18 +1504,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dialog Widget"
+    "## Dialog Widget\n",
+    "\n",
+    "https://www.stefaanlippens.net/jupyter-notebook-dialog.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36789c0164634a9b846dc3778d262e9c",
+       "model_id": "42105bd97b4745d2ab1553de69ed2cd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1523,7 +1525,7 @@
        "VBox(children=(Checkbox(value=True, description='show'), IntSlider(value=0), IntSlider(value=0), IntSlider(val…"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,6 +1555,31 @@
     "])\n",
     "box\n",
     "# dialog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e0370891619942d3b13b25479f8ce193",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value=\"<div class='alert alert-block alert-info'>hello</div>\")"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "widgets.HTML(\"<div class='alert alert-block alert-info'>hello</div>\")"
    ]
   }
  ],
