feat: add Message widget

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -760,10 +760,10 @@
      "evalue": "name 'widgets' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m html_hr \u001B[38;5;241m=\u001B[39m \u001B[43mwidgets\u001B[49m\u001B[38;5;241m.\u001B[39mHTML(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m<hr>\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      2\u001B[0m html_br \u001B[38;5;241m=\u001B[39m widgets\u001B[38;5;241m.\u001B[39mHTML(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m<br>\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mclass\u001B[39;00m \u001B[38;5;21;01mRole\u001B[39;00m(enum\u001B[38;5;241m.\u001B[39mEnum):\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'widgets' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m html_hr \u001b[38;5;241m=\u001b[39m \u001b[43mwidgets\u001b[49m\u001b[38;5;241m.\u001b[39mHTML(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m<hr>\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m html_br \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mHTML(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m<br>\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mRole\u001b[39;00m(enum\u001b[38;5;241m.\u001b[39mEnum):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'widgets' is not defined"
      ]
     }
    ],
@@ -1558,28 +1558,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Message widget"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kuroro/miniforge3/envs/textgen/lib/python3.10/site-packages/anywidget/_util.py:251: UserWarning: anywidget: Live-reloading feature is disabled. To enable, please install the 'watchfiles' package.\n",
+      "  start_thread=_should_start_thread(path),\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0370891619942d3b13b25479f8ce193",
+       "model_id": "88d85bddde424faa81a122b89d009c3b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value=\"<div class='alert alert-block alert-info'>hello</div>\")"
+       "VBox(children=(IntSlider(value=0), IntSlider(value=0), IntSlider(value=0), Button(description='click', style=B…"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "widgets.HTML(\"<div class='alert alert-block alert-info'>hello</div>\")"
+    "import ipywidgets as widgets\n",
+    "from ipywui.widgets import Message\n",
+    "\n",
+    "btn = widgets.Button(description='click')\n",
+    "msg = Message()\n",
+    "def show(e):\n",
+    "    msg.warning({'message': 'hello', 'duration': 0, 'show_close': True})\n",
+    "btn.on_click(show)\n",
+    "box = widgets.VBox([\n",
+    "    widgets.IntSlider(),\n",
+    "    widgets.IntSlider(),\n",
+    "    widgets.IntSlider(),\n",
+    "    btn,\n",
+    "    msg,\n",
+    "])\n",
+    "box\n",
+    "# dialog\n",
+    "# 弹出时overflow\n",
+    "# 多个msg遮挡click\n",
+    "# messagewidget有id标记的单例,根据vm标记"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test singleton\n",
+    "msg = Message()\n",
+    "msg.success({'message': 'success!', 'duration': 0, 'show_close': True})"
    ]
   }
  ],
