feat: Improve the Message component.

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -1580,12 +1580,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88d85bddde424faa81a122b89d009c3b",
+       "model_id": "38492206aab8492a886a11f678a13903",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(IntSlider(value=0), IntSlider(value=0), IntSlider(value=0), Button(description='click', style=B…"
+       "VBox(children=(MessageWidget(message_options={'message': '', 'type': 'info', 'show_close': False, 'duration': …"
       ]
      },
      "execution_count": 1,
@@ -1603,15 +1603,15 @@
     "    msg.warning({'message': 'hello', 'duration': 0, 'show_close': True})\n",
     "btn.on_click(show)\n",
     "box = widgets.VBox([\n",
+    "    msg.widget,\n",
+    "    widgets.HBox([widgets.IntSlider(),widgets.IntSlider(),]),\n",
     "    widgets.IntSlider(),\n",
     "    widgets.IntSlider(),\n",
     "    widgets.IntSlider(),\n",
     "    btn,\n",
-    "    msg,\n",
     "])\n",
     "box\n",
     "# dialog\n",
-    "# 弹出时overflow\n",
     "# 多个msg遮挡click\n",
     "# messagewidget有id标记的单例,根据vm标记"
    ]
@@ -1623,8 +1623,17 @@
    "outputs": [],
    "source": [
     "# test singleton\n",
-    "msg = Message()\n",
-    "msg.success({'message': 'success!', 'duration': 0, 'show_close': True})"
+    "msg_item = msg.error({'message': 'he', 'duration': 0, 'show_close': True})\n",
+    "msg_item = msg.success({'message': 'hello world success!'*10, 'duration': 0, 'show_close': True})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "msg_item.close()"
    ]
   }
  ],
