fix: Dialog widget.

--- a/docs/ipy-vue.ipynb
+++ b/docs/ipy-vue.ipynb
@@ -23,8 +23,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "raw",
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -34,7 +33,6 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
    "source": [
     "import ast\n",
     "import enum\n",
@@ -956,7 +954,41 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd911c05a77948aa8a60f6c8c18b9bad",
+       "model_id": "0be0f5f6e02a40bf9acc5c4d6f97c953",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Document(children=(Dom(children=(MessageWidget(message_options={'message': '', 'type': 'info', 'show_close': F…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "from vuepy import create_app, import_sfc\n",
+    "from ipywui import wui\n",
+    "\n",
+    "App = import_sfc(Path().absolute().parent / 'examples' / 'vue_app'/ 'VueApp.vue')\n",
+    "app = create_app(App, debug=True).use(wui)\n",
+    "app.mount(widgets.Output())\n",
+    "# display(app.debug_log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2f81190b37764a3ab9b43fe1fcd2562a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -969,57 +1001,45 @@
     }
    ],
    "source": [
-    "import pathlib\n",
-    "import ipywidgets as widgets\n",
-    "\n",
-    "from vuepy import create_app, import_sfc\n",
-    "from ipywui import IPywidgets\n",
-    "\n",
-    "source_root = pathlib.Path().absolute().parent\n",
-    "App = import_sfc(source_root / 'examples' / 'vue_app'/ 'VueApp.vue')\n",
-    "\n",
-    "app = create_app(App, debug=True).use(IPywidgets)\n",
-    "app.mount(widgets.Output())\n",
-    "# display(app.debug_log)"
+    "from vuepy import log\n",
+    "display(log.out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kuroro/miniforge3/envs/textgen/lib/python3.10/site-packages/anywidget/_util.py:251: UserWarning: anywidget: Live-reloading feature is disabled. To enable, please install the 'watchfiles' package.\n",
-      "  start_thread=_should_start_thread(path),\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e7855af30a04fe9ace42b384379da77",
+       "model_id": "93b9f4e0e6724a1596e9c1947e92f5c7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ClipboardWidget(children=[Textarea(value=''), Button(description='copy', style=ButtonStyle())], copy='hello')"
+       "VBox(children=(HBox(children=(HTML(value='<p>1</p>'), HTML(value='<p>2</p>'))), IntSlider(value=0)))"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "a_c = [widgets.HTML(\"<p>1</p>\"), widgets.HTML(\"<p>2</p>\")]\n",
+    "a = widgets.HBox(a_c)\n",
+    "widgets.VBox([a, widgets.IntSlider()])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a.children = a_c"
+   ]
   },
   {
    "cell_type": "code",
@@ -1272,35 +1292,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3751f603aa0489f935a59e54e619fd8",
+       "model_id": "40f28cf64d8441b687e3276b3511ba37",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Output()"
+       "Document(children=(Dom(children=(MessageWidget(message_options={'message': '', 'type': 'info', 'show_close': F…"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pathlib\n",
+    "from pathlib import Path\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "from ipywui import IPywidgets\n",
+    "from ipywui import wui\n",
     "from vuepy import create_app, import_sfc\n",
     "\n",
-    "source_root = pathlib.Path().absolute().parent\n",
-    "App = import_sfc(source_root / 'examples' / 'llamacpp_dev' / 'LlamacppDev.vue')\n",
-    "\n",
-    "app = create_app(App, debug=True).use(IPywidgets)\n",
+    "App = import_sfc(Path().absolute().parent / 'examples' / 'llamacpp_dev' / 'LlamacppDev.vue')\n",
+    "app = create_app(App, debug=True).use(wui)\n",
     "app.mount(widgets.Output())"
    ]
   },
@@ -1504,7 +1523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dialog Widget\n",
+    "## Dialog widget\n",
     "\n",
     "https://www.stefaanlippens.net/jupyter-notebook-dialog.html"
    ]
@@ -1517,12 +1536,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42105bd97b4745d2ab1553de69ed2cd3",
+       "model_id": "adbfa590297f46c7966aab2c0008c68c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Checkbox(value=True, description='show'), IntSlider(value=0), IntSlider(value=0), IntSlider(val…"
+       "VBox(children=(Button(description='show', style=ButtonStyle()), Checkbox(value=True, description='show'), IntS…"
       ]
      },
      "execution_count": 2,
@@ -1541,12 +1560,17 @@
     "    print(f\"open: {p}\")\n",
     "def handle_close(p):\n",
     "    print(f\"close: {p}\")\n",
-    "dialog = DialogWidget(title='test', body=[btn], footer=[ok_btn])\n",
+    "dialog = DialogWidget(title='test', body=[btn], footer=[ok_btn], value=False)\n",
     "dialog.on_close(handle_close)\n",
     "dialog.on_open(handle_open)\n",
+    "show_btn = widgets.Button(description='show')\n",
+    "def show(p):\n",
+    "    dialog.value = True\n",
+    "show_btn.on_click(show)\n",
     "\n",
-    "widgets.jslink((ck, 'value'), (dialog, 'value'))\n",
+    "# widgets.jslink((ck, 'value'), (dialog, 'value'))\n",
     "box = widgets.VBox([\n",
+    "    show_btn,\n",
     "    ck,\n",
     "    widgets.IntSlider(),\n",
     "    widgets.IntSlider(),\n",
@@ -1566,21 +1590,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kuroro/miniforge3/envs/textgen/lib/python3.10/site-packages/anywidget/_util.py:251: UserWarning: anywidget: Live-reloading feature is disabled. To enable, please install the 'watchfiles' package.\n",
-      "  start_thread=_should_start_thread(path),\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38492206aab8492a886a11f678a13903",
+       "model_id": "798c71dfdb7e455bb0521e6b5520392d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1588,7 +1604,7 @@
        "VBox(children=(MessageWidget(message_options={'message': '', 'type': 'info', 'show_close': False, 'duration': …"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1618,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
