--- a/docs/ipywui/component/controller.ipynb
+++ b/docs/ipywui/component/controller.ipynb
@@ -5,14 +5,14 @@
    "id": "a1e2fa29-7566-4426-be1e-a750658d83a5",
    "metadata": {},
    "source": [
-    "# Select 选择器\n",
+    "# Controller 游戏控制器🎮\n",
     "\n",
-    "当选项过多时，使用下拉菜单展示并选择内容。"
+    "`Controller` 允许游戏控制器作为输入设备。"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8d6d9832-78ca-44fd-8f86-38dc7f90e752",
+   "id": "7cdc5e8c-2aa8-41d1-9461-3e451f6ef6ea",
    "metadata": {},
    "source": [
     "## 基础用法\n",
@@ -21,9 +21,8 @@
     "\n",
     "`options` 可以是列表，可以是 `(名字、值)` 形式的列表。\n",
     "\n",
-    "::: tip\n",
-    "`v-model` 或初始值必须是 options 中的值。\n",
-    ":::"
+    "> [!TIP]\n",
+    "> `v-model` 或初始值必须是 options 中的值。"
    ]
   },
   {
