--- a/docs/ipywui/component/dropdown.ipynb
+++ b/docs/ipywui/component/dropdown.ipynb
@@ -20,8 +20,9 @@
     "点击下拉菜单以展开更多操作。  \n",
     "`options` 可以是列表，可以是 `(名字、值)` 形式的列表。\n",
     "\n",
-    "> [!TIP]\n",
-    "> `v-model` 或初始值必须是 options 中的值。"
+    "::: tip\n",
+    "`v-model` 或初始值必须是 options 中的值。\n",
+    ":::"
    ]
   },
   {
