fix: cli template_vue

--- a/src/vuepy/cli/template_vue/app.ipynb
+++ b/src/vuepy/cli/template_vue/app.ipynb
@@ -8,18 +8,12 @@
    },
    "outputs": [],
    "source": [
-    "import pathlib\n",
-    "import ipywidgets as widgets\n",
-    "\n",
+    "from pathlib import Path\n",
     "from vuepy import create_app, import_sfc\n",
-    "from ipywui import IPywidgets\n",
     "\n",
-    "HERE = pathlib.Path().absolute().parent\n",
-    "App = import_sfc(HERE / 'App.vue')\n",
-    "\n",
-    "app = create_app(App, debug=True).use(IPywidgets)\n",
-    "app.mount(widgets.Output())\n",
-    "# display(app.debug_log)"
+    "App= import_sfc(Path().absolute().parent / 'App.vue')\n",
+    "app = create_app(App)\n",
+    "app.mount()"
    ]
   }
  ],
